--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ node_modules/
 .cache/
 *.pack
 *.log
+
+#后端
+backend/logs/*.log
+backend/cache/
+backend/_pycache_/
+backend/literature_analysis.db
+*.pdf
+*.docs
+*.doc
+
+gemini-fullstack-langgraph-quickstart-main/
+
+# YoYo AI version control directory
+.yoyo/
