--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,23 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.0",
     "antd": "^5.12.1",
     "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
     "mammoth": "^1.6.0",
     "pdfjs-dist": "^3.11.174",
+    "plotly.js": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "@mui/material": "^5.15.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
     "recharts": "^2.10.0"
   },
   "scripts": {
