feat:添加柱状图、热力图、成对关系图的选择

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ node_modules/
 backend/logs/*.log
 backend/cache/
 backend/_pycache_/
-backend/literature_analysis.db
+backend\literature_analysis.db
 *.pdf
 *.docs
 *.doc
