选择多篇文献数据作图

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ gemini-fullstack-langgraph-quickstart-main/
 
 # YoYo AI version control directory
 .yoyo/
+Catalysis-Paper-Reader\backend\uploads\
+Catalysis-Paper-Reader\backend\__pycache__
