--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/colors": "^7.2.1",
     "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
@@ -11,6 +12,7 @@
     "axios": "^1.6.2",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
+    "framer-motion": "^12.23.12",
     "mammoth": "^1.6.0",
     "pdfjs-dist": "^3.11.174",
     "plotly.js": "^3.0.1",
@@ -21,6 +23,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^10.0.1",
     "react-window": "^1.8.11",
     "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.10.0"
